# clion_qtcreator

./: CMakeLists.txt  README.md
inc/: deal.h  mainwindow.h
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  deal.cpp  main.cpp  mainwindow.cpp
